# Project3_Render

./: README.md  SQLFunctions.py  analytics.py  build.sh  db.sqlite3  migrate.py  pyproject.toml  render.yaml  requirements.txt  t.txt  test.py
DBModels/: admin.py  apps.py  forms.py  models.py
DBModels/migrations/: 0001_initial.py  0002_category_customer_employee_excessreport_job_product_and_more.py
Spin_n_Stone/: settings.py  urls.py
customer/: apps.py  forms.py  urls.py  views.py
customer/static/: Check.css  Checkout.css  Cheese_selection.css  Drizzle_selection.css  Pizza_selection.css  Sauce.css  Toppings_selection.css  style.css
customer/templates/: Checkout.html  Cheese_selection.html  Crust_selection.html  Drizzle_selection.html  Pizza_selection.html  Sauce_selection.html  Toppings_selection.html  footer.html
customer/templatetags/: custom_tags.py  google_translate.py
google_translate/: apps.py
google_translate/templates/: translate.html
google_translate/templatetags/: google_translate.py
login/: models.py  urls.py  views.py
login/migrations/: 0001_initial.py  0002_auto_20221129_1304.py
login/static/: loginpage.css
manager/: analytics.py  models.py  urls.py  views.py
manager/static/: TableView.css
manager/templates/: add.html  analytics.html  categories.html  change.html  customers.html  employees.html  jobs.html  managerScreen.html  products.html  recipes.html  table_header.html  transactions.html
oauth/: urls.py  views.py
oauth/templates/: home.html
server/: forms.py  models.py  urls.py  views.py
server/static/: server.css
(+6 files in other folders)
